tests/baselines/reference/ES5For-of7(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5For-of7.ts(6,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'never', but here has type 'never[]'.
ES5For-of7.ts(6,14): error TS2454: Variable 'w' is used before being assigned.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5For-of7.ts (2 errors) ====
    for (var w of []) {
        var x = w;
    }
    
    for (var v of []) {
        var x = [w, v];
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'never', but here has type 'never[]'.
!!! related TS6203 ES5For-of7.ts:2:9: 'x' was also declared here.
                 ~
!!! error TS2454: Variable 'w' is used before being assigned.
    }